# desk-lamp

./: CMakeLists.txt  LampButton.qml  Main.qml  README.md  controller.cpp  controller.h  lightbulb.cpp  lightbulb.h  main.cpp
